🌐 Update quick reply translations in English and Japanese

--- a/apps/frontend/src/i18n/en.json
+++ b/apps/frontend/src/i18n/en.json
@@ -230,7 +230,11 @@
     "email": "Email",
     "password": "Password"
   },
-  "quickReply": {},
+  "quickReply": {
+    "WhatINeed": "What I need to do?",
+    "HowToUse": "How to use this?",
+    "BeginTutorial": "Begin tutorial"
+  },
   "dialogue": {
     "Introduction": "Hi! click the quick reply button of type in your questions to choose what to do!"
   },
