--- a/apps/frontend/src/i18n/ja.json
+++ b/apps/frontend/src/i18n/ja.json
@@ -225,7 +225,11 @@
     "writeContent": "ここにコンテンツを書いてください",
     "writeMetadata": "ここにメタデータを書き込みます"
   },
-  "quickReply": {},
+  "quickReply": {
+    "HowToUse": "どうやって使うの？",
+    "WhatINeed": "何をしたらいいの？",
+    "BeginTutorial": "チュートリアルを始めたい"
+  },
   "dialogue": {
     "Introduction": "こんにちは！まずは画面下のボタンや、チャット欄から、何をしたいか決めましょう！"
   },
