🌐 Update Japanese translations for login and account management terms

--- a/apps/frontend/src/i18n/ja.json
+++ b/apps/frontend/src/i18n/ja.json
@@ -8,31 +8,31 @@
     "Stopped": "停止中"
   },
   "login": {
-    "welcome": "続行するにはログインしてください",
+    "welcome": "つづけるにはログインしてください",
     "title": "ログイン",
     "username": "ユーザー名",
     "password": "パスワード",
     "login": "ログイン",
     "loginFailed": "ログインに失敗しました",
-    "confirmPassword": "パスワードを認証する",
-    "continueAsGuest": "ゲストとして続行",
-    "createAccount": "アカウントを作成する",
-    "createAccountDescription": "データを保存するためにアカウントを作成します。",
+    "confirmPassword": "パスワードを確認する",
+    "continueAsGuest": "ゲストとしてつづける",
+    "createAccount": "アカウントをつくる",
+    "createAccountDescription": "データを残すためにアカウントをつくります",
     "deleteAccount": "アカウントを削除する",
     "displayName": "表示名",
-    "displayNameDescription": "これはあなたの表示名です。",
-    "edit": "アカウントの編集",
-    "editDescription": "情報を編集します。",
-    "editTitle": "アカウントの編集",
-    "email": "電子メール",
+    "displayNameDescription": "これはあなたの表示名です",
+    "edit": "ログイン情報の編集",
+    "editDescription": "ログイン情報を編集します",
+    "editTitle": "ログイン情報の編集",
+    "email": "メールアドレス",
     "guest": "ゲストユーザー",
     "image": "画像",
     "newPassword": "新しいパスワード",
-    "oldPassword": "以前のパスワード",
+    "oldPassword": "前のパスワード",
     "signout": "サインアウト",
     "update": "アップデート",
     "userName": "ユーザー名",
-    "userNameDescription": "これはログイン用のユーザー名です。",
+    "userNameDescription": "これはログイン用のユーザー名です",
     "confirmPasswordDescription": "パスワードを確認のために入力してください",
     "emailDescription": "あなたのメールアドレス",
     "passwordDescription": "パスワードを入力してください"
@@ -211,7 +211,7 @@
     "tutorialDescription": "チュートリアルの説明",
     "tutorialId": "チュートリアルID",
     "tutorialLanguage": "言語",
-    "tutorialSelectCount": "カウントを選択",
+    "tutorialSelectCount": "チュートリアルが選ばれた回数",
     "tutorialTags": "タグ",
     "tutorialTitle": "チュートリアルのタイトル",
     "tutorials": "チュートリアル",
