--- a/apps/frontend/src/i18n/ja.json
+++ b/apps/frontend/src/i18n/ja.json
@@ -43,7 +43,9 @@
     "signout": "サインアウト",
     "noTutorial": "チュートリアルを選んでいません",
     "reload": "リロード",
-    "execSwitch": "コードを実行"
+    "execSwitch": "コードを実行",
+    "addSessionName": "プロジェクトに名前をつける",
+    "addSessionNameDescription": "保存する前にプロジェクトに名前をつけよう"
   },
   "session": {
     "about": "このアプリについて",
@@ -298,6 +300,8 @@
     "failedToUploadTutorial": "チュートリアルのアップロードに失敗しました",
     "noConfigToSave": "保存する構成値がありません",
     "outputNodeCannotBeDeleted": "出力ノードは削除できません",
-    "sessionDeleted": "セッションが削除されました"
+    "sessionDeleted": "セッションが削除されました",
+    "updatedProjectName": "プロジェクト名を更新しました",
+    "failedToUpdateProjectName": "プロジェクト名の更新に失敗しました"
   }
 }
