--- a/apps/frontend/src/i18n/ja.json
+++ b/apps/frontend/src/i18n/ja.json
@@ -59,8 +59,8 @@
     "aboutText": "このアプリは、LLM（AI）を利用したチュートリアルを提供するセルフホストソフトウェアです。  このアプリケーションを利用すると、サイトの管理者は個人を特定できない形で、ユーザーの利用状況や、発言のデータを収集することができ、収集されたデータはアプリ内のチャット機能の学習や、AIの挙動改善に利用されます。  アプリで提供されたデータの取扱の詳しい情報については、ウェブサイトの管理者にお問い合わせください。このアプリケーションはオープンソースで公開されており、ソースコードが改変されている可能性もあるため、ウェブサイトの管理者が不明な場合、アプリケーションを利用しないことをお勧めします。  作成したセッションの情報のデータは削除されることがあります。",
     "findSavedSession": "保存したデータをつかう",
     "savedSession": "セーブしたセッション",
-    "continueSession": "セッションをつづける",
-    "deleteSession": "このセッションを削除する",
+    "continueSession": "つづける",
+    "deleteSession": "削除する",
     "checkingServer": "サーバーの状態を確認中...",
     "available": "アプリは利用可能です",
     "serverOffline": "サーバーはオフラインです - アプリは利用できません",
