--- a/apps/frontend/src/i18n/ja.json
+++ b/apps/frontend/src/i18n/ja.json
@@ -67,7 +67,8 @@
     "installPWA": "PWAとしてインストールする",
     "deleteStorage": "全ての保存内容を削除する",
     "failedCreate": "セッションの作成に失敗しました",
-    "savedSessionDescription": "継続できるセッションのリスト"
+    "savedSessionDescription": "継続できるセッションのリスト",
+    "untitled": "名前のないセッション"
   },
   "sidebar": {
     "dashboard": "ダッシュボード",
@@ -223,7 +224,8 @@
     "welcome": "TutoriaLLM へようこそ",
     "workspacePreview": "ワークスペースのプレビュー",
     "writeContent": "ここにコンテンツを書いてください",
-    "writeMetadata": "ここにメタデータを書き込みます"
+    "writeMetadata": "ここにメタデータを書き込みます",
+    "projectName": "プロジェクト名"
   },
   "quickReply": {
     "HowToUse": "どうやって使うの？",
