feat: integrate MinIO for S3 storage for image / file storage and update environment variables
- Added MinIO service to docker-compose for local S3 storage.
- Updated .env.example and .env.test with S3 credentials.
- Included @aws-sdk/client-s3 dependency in backend package.json.
- Enhanced user profile image handling in frontend components to use backend URL.
- Introduced file input component for image uploads and added validation schema for image uploads.
- Updated translations for new features and error messages.

--- a/apps/frontend/src/i18n/en.json
+++ b/apps/frontend/src/i18n/en.json
@@ -71,7 +71,8 @@
     "passwordDescription": "Type your password",
     "confirmPasswordDescription": "Type in to confirm your password",
     "internalServerError": "Server error occurred.",
-    "unknownError": "An error occurred."
+    "unknownError": "An error occurred.",
+    "editIcon": "edit icon"
   },
   "sidebar": {
     "dashboard": "Dashboard",
@@ -302,7 +303,9 @@
     "noConfigToSave": "No config value to save",
     "updatedProjectName": "Project name updated",
     "failedToUpdateProjectName": "Failed to update project name",
-    "createdUser": "New user created"
+    "createdUser": "New user created",
+    "failedToUpdateIcon": "Failed to upadte icon",
+    "invalidImageFormat": "Invalid image format"
   },
   "generic": {
     "audio": "Audio",
