refactor: remove MarkdownGen component and streamline TutorialEditor functionality
Improved components for node editor on Admin Console #169- Removed the MarkdownGen component to
simplify the TutorialEditor structure.- Updated node types in TutorialEditor to exclude
MarkdownGen.- Enhanced Markdown and MetadataGen components with improved state management and UI
elements.- Added a dialog for the Markdown editor to improve user experience.- Updated
internationalization files to include new keys for original content and markdown editor.

fix #169

--- a/apps/frontend/src/i18n/en.json
+++ b/apps/frontend/src/i18n/en.json
@@ -238,7 +238,9 @@
     "emailDescription": "User's email for authentication",
     "all": "all",
     "searchByText": "search by username",
-    "anonymous": "Guest user"
+    "anonymous": "Guest user",
+    "originalContent": "original content",
+    "markdownEditor": "markdown editor"
   },
   "quickReply": {
     "WhatINeed": "What I need to do?",
