--- a/apps/frontend/src/i18n/ja.json
+++ b/apps/frontend/src/i18n/ja.json
@@ -184,17 +184,17 @@
     "generatingMarkdown": "生成中...",
     "lastUpdatedTime": "最終更新時間",
     "metadata": "メタデータ",
-    "metadataGenerator": "メタデータジェネレーター",
+    "metadataGenerator": "メタデータの生成",
     "noDate": "日付なし",
     "noEmail": "メールなし",
     "noName": "名前なし",
     "noUsername": "ユーザー名がありません",
     "notSelected": "選択されていません",
-    "originalMd": "オリジナルの値下げ",
+    "originalMd": "オリジナルのマークダウン",
     "originalMetaData": "元のメタデータ",
     "password": "パスワード",
-    "refineContent": "コンテンツを絞り込む",
-    "refineMetadata": "メタデータを絞り込む",
+    "refineContent": "コンテンツを生成",
+    "refineMetadata": "メタデータを生成",
     "role": "役割",
     "selectedTutorial": "選択したチュートリアル",
     "sessionAnalyticsDialog": "セッション分析ダイアログ",
@@ -226,14 +226,16 @@
     "username": "ユーザー名",
     "welcome": "TutoriaLLM へようこそ",
     "workspacePreview": "ワークスペースのプレビュー",
-    "writeContent": "ここにコンテンツを書いてください",
-    "writeMetadata": "ここにメタデータを書き込みます",
+    "writeContent": "コンテンツの書き込み",
+    "writeMetadata": "メタデータの書き込み",
     "projectName": "プロジェクト名",
     "displayNameDescription": "ユーザーの表示名",
     "emailDescription": "ユーザーの認証用メールアドレス",
     "all": "全て",
     "searchByText": "ユーザー名で検索",
-    "anonymous": "ゲストユーザー"
+    "anonymous": "ゲストユーザー",
+    "originalContent": "元のコンテンツ",
+    "markdownEditor": "Markdown エディター"
   },
   "quickReply": {
     "HowToUse": "どうやって使うの？",
