docs: update links in documentation for consistency
- Changed references from the outdated host documentation to the new repository guide in both
English and Japanese documentation.- Adjusted image path in the repository structure documentation
for correct rendering.

--- a/apps/docs/src/content/docs/en/developer/repo.mdx
+++ b/apps/docs/src/content/docs/en/developer/repo.mdx
@@ -11,7 +11,7 @@ import {
 
 ## TutoriaLLM Repository Structure
 
-![Repository Structure](../../media/images/stacks.png)
+![Repository Structure](../../../media/images/stacks.png)
 
 TutoriaLLM consists of two main systems: the frontend and the backend. The frontend is built with React, Vite, and Tanstack Router, while the backend is built with Hono and Node.js. It uses PostgreSQL as the database. Additionally, there is an extension system that provides functionality for integrating with external applications like Minecraft.
 
