--- a/apps/docs/src/content/docs/en/index.mdx
+++ b/apps/docs/src/content/docs/en/index.mdx
@@ -46,7 +46,7 @@ import Contributers from "../../../components/Contributors.astro";
   <Card title="Deploy Your Own App" icon="github">
     Start by checking the [GitHub
     repository](https://github.com/TutoriaLLM/TutoriaLLM) or refer to the
-    [Editor Guide](/en/developer/host).
+    [Editor Guide](/en/developer/repo).
   </Card>
   <Card title="Try the Demo" icon="external">
     Experience the demo of [TutoriaLLM](https://demo.tutoriaLLM.com), where you
