--- a/apps/docs/src/content/docs/index.mdx
+++ b/apps/docs/src/content/docs/index.mdx
@@ -44,7 +44,7 @@ import Contributors from "../../components/Contributors.astro";
 
 <CardGrid stagger>
   <Card title="自分のアプリをデプロイする" icon="github">
-    [GitHubリポジトリ](https://github.com/TutoriaLLM/TutoriaLLM)から初めるか、[ホストする方法](/developer/host)を参照してください。
+    [GitHubリポジトリ](https://github.com/TutoriaLLM/TutoriaLLM)から初めるか、[ホストする方法](/developer/repo)を参照してください。
   </Card>
   <Card title="デモを体験する" icon="external">
     いくつかのチュートリアルを試せる[TutoriaLLMのデモ](https://demo.tutoriaLLM.com)に触れてみましょう。
