--- a/apps/docs/src/content/docs/introduction/index.mdx
+++ b/apps/docs/src/content/docs/introduction/index.mdx
@@ -97,5 +97,5 @@ TutoriaLLM のコミュニティに参加して、他のユーザーと交流し
 <LinkCard
   title="開発 - クイックスタート"
   description="TutoriaLLM を使ってアプリケーションを作成する方法を学びましょう。"
-  href="/developer/host"
+  href="/developer/repo"
 />
