--- a/apps/docs/src/content/docs/en/introduction/index.mdx
+++ b/apps/docs/src/content/docs/en/introduction/index.mdx
@@ -88,5 +88,5 @@ If you would like to create and publish your own tutorials, you can use TutoriaL
 <LinkCard
   title="Development - Quick Start"
   description="Learn how to create an application using TutoriaLLM."
-  href="/en/developer/host"
+  href="/en/developer/repo"
 />
