docs: update environment configuration and documentation (#328)
* docs: update environment configuration and documentation

- Added BetterAuth URL and secret to .env.example for local development.- Adjusted sidebar order in
development documentation for better navigation.- Removed outdated host documentation and replaced
it with a new repository structure guide.- Updated CLI and troubleshooting documentation to reflect
recent changes and improvements.- Introduced a new Docker Compose file for PostgreSQL setup.

* docs: update links in documentation for consistency

- Changed references from the outdated host documentation to the new repository guide in both
English and Japanese documentation.- Adjusted image path in the repository structure documentation
for correct rendering.

--- a/apps/docs/src/content/docs/en/introduction/index.mdx
+++ b/apps/docs/src/content/docs/en/introduction/index.mdx
@@ -69,11 +69,7 @@ If you are new to programming, try the demo first. You can experience the featur
   description="Experience the TutoriaLLM demo."
   href="https://demo.tutoriaLLM.com"
 />
-
-<Aside type="caution" title="Caution">
-  TutoriaLLM is server software for creating tutorial-providing websites, not
-  the name of an application.
-</Aside>
+ 
 
 ### Join the Community
 
@@ -92,5 +88,5 @@ If you would like to create and publish your own tutorials, you can use TutoriaL
 <LinkCard
   title="Development - Quick Start"
   description="Learn how to create an application using TutoriaLLM."
-  href="/en/developer/host"
+  href="/en/developer/repo"
 />
