--- a/apps/docs/src/content/docs/en/index.mdx
+++ b/apps/docs/src/content/docs/en/index.mdx
@@ -28,7 +28,7 @@ import {
 import Contributers from "../../../components/Contributors.astro";
 
 <Aside type="note" title="Important Notice">
-- **June 3rd to 4th, 2025**, TutoriaLLM was presented at the **Blockly Summit 2025** in Google (Seattle, USA). [Click here for session video](https://www.youtube.com/watch?v=zVqjqdK0cPQ)
+- **June 3rd to 4th, 2025**, TutoriaLLM was presented at the **Blockly Summit 2025** in Google (Seattle, USA). [Click here for session video](https://youtu.be/GCtFWPWUPXY)
 
 - **Monday, November 4th (Public Holiday in Japan)**, a **presentation of TutoriaLLM** was held online at the **2024 Mitou Junior Achievement Report Meeting** at the University of Tokyo. [Click here for more details](https://jr.mitou.org/english/projects/2024/tutoriallm)
 
