--- a/apps/docs/src/content/docs/index.mdx
+++ b/apps/docs/src/content/docs/index.mdx
@@ -28,7 +28,7 @@ import {
 import Contributors from "../../components/Contributors.astro";
 
 <Aside type="note" title="大事なお知らせ">
-- **2025年6月3日から4日**にかけてGoogle(シアトル)で開催されるBlockly Summit 2025で、**TutoriaLLMのプレゼンテーションを行います。**[詳しくはこちらをご覧ください](https://www.blocklysummit.com/)
+- **2025年6月3日から4日**にかけてGoogle(シアトル)で開催されたBlockly Summit 2025で、**TutoriaLLMのプレゼンテーションを行いした。**[詳しくはこちらをご覧ください](https://youtu.be/GCtFWPWUPXY)
 
 - **2024年11月4日 (月曜・振替休日)** に東京大学で開催された**2024年度の未踏ジュニア成果報告会**で、TutoriaLLMの**プレゼンテーションをオンラインにて行いました。**[詳しくはこちらをご覧ください](https://jr.mitou.org/projects/2024/tutoriallm)
 
